fixed overflow issue

--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -1,4 +1,5 @@
 $spacing: 16px;
+$transition-time: .1s;
 
 $playersize: 100px;
 $sidebar-width: 300px;
