--- a/assets/styles/components/library.scss
+++ b/assets/styles/components/library.scss
@@ -1,4 +1,4 @@
-@use '~/assets/styles/variables' as v;
+@use "~/assets/styles/variables" as v;
 
 .library {
   display: flex;
@@ -11,29 +11,31 @@
   height: 100%;
   padding: 16px;
   position: relative;
+  overflow: hidden;
 
-  .link{
+  .link {
     display: flex;
     justify-content: left;
     align-items: center;
     gap: 12px;
-    transition: all .2s;
+    transition: all 0.2s;
     color: v.$text;
     user-select: none;
     padding-left: 12px;
   }
 
-  .link svg{
+  .link svg {
     fill: currentColor;
   }
 
-  .link:hover, .link.router-link-active{
+  .link:hover,
+  .link.router-link-active {
     color: v.$text-bright;
-    transition: all .2s;
+    transition: all 0.2s;
   }
 
   .search-container {
-    width: 268px;
+    width: 100%;
     height: 32px;
     background-color: v.$element;
     outline: none;
@@ -44,33 +46,44 @@
     align-items: center;
     padding-inline: 6px;
     gap: 6px;
-    
-    .input{
+
+    .input {
       background-color: transparent;
       border: none;
       font-size: 14px;
       outline: none;
       color: #8b8b8b;
-      width: 235px;
+      width: 100%;
       height: 32px;
     }
   }
 }
 
-.items{
+.items {
   display: flex;
   flex-direction: column;
   gap: 8px;
   color: v.$text-bright;
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+  overflow-x: hidden;
 
-  .song{
+  .song {
     display: flex;
     align-items: center;
     gap: 8px;
     cursor: pointer;
+    width: 100%;
+
+    .title {
+      display: flex;
+      width: 100%;
+    }
   }
 
-  .cover{
+  .cover {
     width: 32px;
+    height: 32px;
   }
 }
