--- a/assets/styles/components/player.scss
+++ b/assets/styles/components/player.scss
@@ -23,6 +23,11 @@
     .artist {
       color: v.$text;
     }
+
+    .cover {
+      width: 36px;
+      height: 36px;
+    }
   }
 
   .controls {
