--- a/assets/styles/layouts/default_layout.scss
+++ b/assets/styles/layouts/default_layout.scss
@@ -4,7 +4,7 @@
   border: 1px solid v.$foreground;
   position: relative;
   padding: v.$spacing;
-  transition: border 0.05s;
+  transition: border v.$transition-time;
 
   .element-title {
     font-size: 14px;
@@ -15,7 +15,20 @@
     padding-inline: 3px;
     color: v.$text-muted;
     user-select: none;
-    transition: color 0.05s;
+    transition: color v.$transition-time;
+  }
+
+  +.library-title {
+    font-size: 14px;
+    position: absolute;
+    top: 155px;
+    z-index: 100;
+    left: 21px;
+    background-color: v.$background;
+    padding-inline: 3px;
+    color: v.$text-muted;
+    user-select: none;
+    transition: color v.$transition-time;
   }
 
   &:hover {
@@ -50,6 +63,10 @@
       gap: v.$spacing;
       height: 100%;
       width: v.$sidebar-width;
+
+      &:has(.library:hover) .library-title {
+        color: v.$accent;
+      }
     }
 
     .main {
